--- a/src/test/java/config.properties
+++ b/src/test/java/config.properties
@@ -1,3 +1,3 @@
 
-url =https://www.fcgphotelhub.com/Login.aspx
+url =https://stage-www.fcgphotelhub.com/Login.aspx
 urladmin=https://stage-admin.fcgphotelhub.com/default.aspx
